--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,13 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         MARC-Detrans
-version:      0.4
+version:      0.5
 version_from: lib/MARC/Detrans.pm
 installdirs:  site
 requires:
     Class::Accessor:               0.19
     MARC::Record:                  1.38
+    Test::Exception:               0
     XML::SAX:                      0.12
 
 distribution_type: module
