--- a/META.yml
+++ b/META.yml
@@ -1,14 +1,17 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         MARC-Detrans
-version:      1.3
-version_from: lib/MARC/Detrans.pm
-installdirs:  site
-requires:
+--- #YAML:1.0
+name:                MARC-Detrans
+version:             1.4
+abstract:            De-transliterate text and MARC records
+license:             ~
+author:              
+    - Ed Summers <ehs@pobox.com>
+generated_by:        ExtUtils::MakeMaker version 6.42
+distribution_type:   module
+requires:     
     Class::Accessor:               0.19
     MARC::Record:                  1.38
     Test::Exception:               0
     XML::SAX:                      0.12
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.21
+meta-spec:
+    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
+    version: 1.3
